Ajout des commandes manuelles

--- a/playbook-ssh.yml
+++ b/playbook-ssh.yml
@@ -1,5 +1,8 @@
 ---
 
+# A exécuter avec :
+# ansible-playbook --ask-pass playbook-ssh.yml
+
 - name: Déploiement de la clé SSH
   hosts: all
   gather_facts: no
