--- a/playbook-wp.yml
+++ b/playbook-wp.yml
@@ -9,7 +9,20 @@
 - name: Déploiement sur les serveurs web
   hosts: web
   tasks:
-    - name: Tâches web
+    - name: Tâches web Apache
       include_tasks: tasks/web-apache.yml
+    - name: Tâches web WP
       include_tasks: tasks/web-wp.yml
+    - name: Tâches web NFS
       include_tasks: tasks/web-nfs.yml
+  handlers:
+  # sudo systemctl restart nfs-kernel-server
+  - name: Redémarrer nfs-kernel-server
+    service: 
+      name: nfs-kernel-server
+      state: restarted
+  # sudo systemctl restart apache2
+  - name: Redémarrer Apache
+    service: 
+      name: apache2
+      state: restarted
