--- a/tasks/web-apache.yml
+++ b/tasks/web-apache.yml
@@ -19,14 +19,14 @@
   file:
     path: /etc/apache2/sites-enabled/000-default.conf
     state: absent
-  notify: "Redémarrer Apache"
+  notify: Redémarrer Apache
 
 # Création du vhost wordpress
 - name: Configuration du vhost wordpress
   template:
     src: files/vhost-wordpress
     dest: /etc/apache2/sites-available/wordpress.conf
-  notify: "Redémarrer Apache"
+  notify: Redémarrer Apache
 
 # Activation du vhost wordpress
 - name: Activation du vhost wordpress
@@ -34,12 +34,12 @@
     src: /etc/apache2/sites-available/wordpress.conf
     dest: /etc/apache2/sites-enabled/wordpress.conf
     state: link
-  notify: "Redémarrer Apache"
+  notify: Redémarrer Apache
 
 # sudo a2enmod proxy_fcgi
 - name: Activation du module proxy_fcgi
   apache2_module:
     name: proxy_fcgi
     state: present
-  notify: "Redémarrer Apache"
+  notify: Redémarrer Apache
 
