--- a/tasks/php-nfs.yml
+++ b/tasks/php-nfs.yml
@@ -1,2 +1,14 @@
 ---
 
+# sudo apt install nfs-common
+- name: Installer les paquets nécessaires
+  apt:
+    name: nfs-common
+    state: latest
+
+- name: Configuration du montage dans fstab
+  lineinfile:
+    path: /etc/fstab
+    regexp: "^{{ hostvars[groups['web'][0]]['ansible_host'] }}:{{ wordpress_path }}[\t| ]"
+    line: "{{ hostvars[groups['web'][0]]['ansible_host'] }}:{{ wordpress_path }}	{{ wordpress_path }}	nfs	defaults	0	0"
+
