--- a/roles/nfs/tasks/client.yml
+++ b/roles/nfs/tasks/client.yml
@@ -1,2 +1,15 @@
 ---
 
+- name: Install NFS client packages
+  apt:
+    name: nfs-common
+    state: latest
+
+- name: Configure and mount NFS
+  ansible.posix.mount:
+    src: "{{ item.server }}:{{ item.server_fs }}"
+    path: "{{ item.mountpoint }}"
+    opts: "{{ item.options }}"
+    state: mounted
+    fstype: nfs
+  with_items: "{{ nfs_mounts }}"
