--- a/playbook-wp.yml
+++ b/playbook-wp.yml
@@ -6,9 +6,7 @@
     - common
     - nfs
     - apache
-  tasks:
-    - name: Tâches web WP
-      include_tasks: tasks/web-wp.yml
+    - wordpress
 
 - name: Déploiement sur les serveurs PHP
   hosts: php
