--- a/playbook-controlnode.yml
+++ b/playbook-controlnode.yml
@@ -4,5 +4,11 @@
   hosts: localhost
   gather_facts: no
   tasks:
-    - name: Tâches du controlnode
-      include_tasks: tasks/controlnode.yml
+    #ansible -m pip -a "name=ansible state=latest executable=~/.local/bin/pip extra_args=--break-system-packages" --become-user=openit localhost
+    - name: Mise à jour de Ansible
+      pip:
+        name: ansible
+        state: latest
+        executable: ~/.local/bin/pip
+        extra_args: --break-system-packages
+      become_user: openit
