--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,8 +2,7 @@
 
 #ansible -m apt -a "update_cache=yes name=* state=latest" all
 - name: Mettre à jour les systèmes
-  apt:
-    update_cache: yes
+  package:
     name: "*"
     state: latest
 
