--- a/roles/nfs/tasks/server.yml
+++ b/roles/nfs/tasks/server.yml
@@ -1,9 +1,16 @@
 ---
 
-- name: Install NFS server packages
-  apt:
+- name: Install NFS server packages on Debian
+  package:
     name: nfs-kernel-server
     state: latest
+  when: ansible_os_family == "Debian"
+
+- name: Install NFS server packages on RedHat
+  package:
+    name: nfs-utils
+    state: latest
+  when: ansible_os_family == "RedHat"
 
 - name: Ensure nfs-kernel-server is running and starts on boot
   service:
